# litemiro

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
.github/workflows/: ci.yml  frontend-ci.yml
docs/api/: contract.md
docs/decisions/: 0001-persona-memory-cosine-threshold.md
docs/integration/: phase1-2-contract.md
docs/qa/: baseline.json  baseline.md  behavior-tendency-calibration-2026-05-29.md  longrun-50R-2026-05-29.md  metrics.md  phase1-model-benchmark-2026-05-26.md  phase2-action-selector-distribution-2026-05-28.md  phase2-create-post-recovery-2026-05-28.md  phase3-preset-comparison-2026-05-28.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: ApiStatusBadge.tsx  client.ts  useApiHealth.ts
frontend/src/components/: atoms.tsx  chrome.tsx
frontend/src/data/: mock.ts  types.ts
frontend/src/lib/: nav.ts  roles.ts
frontend/src/screens/: Casting.tsx  Landing.tsx  Live.tsx  Plaza.tsx  Report.tsx  Seed.tsx
frontend/src/styles/: chrome.css  components.css  index.css  screen-casting.css  screen-landing.css  screen-live.css  screen-plaza.css  screen-report.css  screen-seed.css  stubs.css  tokens.css
scripts/: check_qa_regression.py  collect_qa_baseline.py  measure_persona_memory_cosine.py  phase1_model_benchmark.py
src/litemiro/: __init__.py  _vector.py  interfaces.py  models.py
src/litemiro/action/: __init__.py  selector.py
src/litemiro/api/: __init__.py  __main__.py  app.py  composer.py  db.py  document_store.py  layout.py  models.py  ontology_store.py  report.py  runner.py  sample_fixtures.py  store.py
src/litemiro/budget/: __init__.py  manager.py
src/litemiro/cli/: __init__.py  ontology.py  report.py  run.py  validate.py
src/litemiro/core/: __init__.py  _types.py  agent_scheduler.py  concurrency_controller.py  context_builder.py  round_manager.py  state_store.py
src/litemiro/embedding/: __init__.py  sentence_transformers.py
src/litemiro/eventlog/: __init__.py  logger.py
src/litemiro/feed/: __init__.py  engine.py
src/litemiro/integration/: __init__.py  _resource.py  ontology_loader.py  run.py
src/litemiro/llm/: __init__.py  litellm_client.py
src/litemiro/phase1/: agent_expander.py  content_filter.py  entity_extractor.py  entity_ranker.py  llm.py  local_graph.py  memory_initializer.py  models.py  ontology_generator.py  pipeline.py  profile_generator.py  serializer.py  text_chunker.py  validator.py
src/litemiro/phase3/: __init__.py  baseline.py  data_aggregator.py  models.py  pattern_analyzer.py  report_composer.py
src/litemiro/prompts/: __init__.py  action_selector.py
src/litemiro/schemas/: __init__.py  ontology_a.schema.json  ontology_b.schema.json  round_event.schema.json
src/litemiro/social/: __init__.py  graph.py
src/litemiro/topics/: __init__.py  extractor.py
tests/: conftest.py  fakes.py
tests/cli/: test_report_cli.py  test_run_cli.py
tests/data/: round_event_sample.jsonl  sample_document.txt  sample_ontology_a.json  sample_ontology_b.json  sample_quick_preset_ontology_a.json  sample_quick_preset_ontology_b.json
tests/e2e/: _phase1_to_phase2_helpers.py  test_concurrency_load.py  test_phase1_to_phase2_json_smoke.py  test_phase1_to_phase2_smoke.py  test_phase3_pipeline.py  test_run_simulation_smoke.py
tests/e2e/phase1/: test_quick_preset_e2e.py
tests/integration/: test_b_module_loop.py
tests/unit/: test_action_selector.py  test_agent_scheduler.py  test_concurrency_controller.py  test_context_builder.py  test_core_types.py  test_data_aggregator.py  test_event_logger.py  test_fakes.py  test_feed_engine.py  test_integration_resource.py  test_interfaces.py  test_litellm_client.py  test_models.py  test_models_schema_parity.py  test_ontology_cli.py  test_ontology_loader.py  test_pattern_analyzer.py  test_qa_baseline.py  test_report_composer.py  test_round_manager.py  test_social_graph.py  test_st_embedder.py  test_state_store.py  test_token_budget_manager.py  test_topic_extractor.py  test_validate_cli.py  test_vector.py
tests/unit/api/: test_composer.py  test_documents.py  test_events.py  test_health.py  test_main_fake.py  test_ontologies.py  test_plazas.py  test_report.py  test_runner.py
tests/unit/phase1/: conftest.py  test_agent_expander.py  test_llm.py  (+12 more)
(+9 files in other folders)
