[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "litemiro"
version = "0.1.0"
description = "Mirofish — LLM-driven social media simulation engine (Phase 2 + Phase 3)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Team Fossil" },
]
keywords = ["simulation", "social-media", "llm", "asyncio", "capstone"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pydantic>=2.6,<3",
  "tenacity>=8.2,<10",
  "json-repair>=0.25,<1",
  "jsonschema>=4.21,<5",
  "rfc3339-validator>=0.1,<1",
  "structlog>=24.1,<26",
  "aiohttp>=3.9,<4",
  "litellm>=1.40,<2",
  "openai>=1.30,<2",
  "python-dotenv>=1.0,<2",
  "tomli>=2.0; python_version<'3.11'",
  "PyPDF2>=3.0,<5",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
embedding = [
  "sentence-transformers>=2.7,<6",
  "numpy>=1.26,<3",
]
report = [
  "matplotlib>=3.8,<4",
  "plotly>=5.20,<7",
  "Jinja2>=3.1,<4",
]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  # RealPlazaRunner 가 STEmbedder 를 통해 sentence-transformers 를 호출하므로
  # `pip install -e '.[api]'` 만으로도 실 모드가 동작해야 한다.
  "sentence-transformers>=2.7,<6",
  "numpy>=1.26,<3",
]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=5.0,<7",
  "hypothesis>=6.100,<7",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "types-jsonschema>=4.21,<5",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
]

[project.scripts]
litemiro-validate = "litemiro.cli.validate:main"
litemiro-ontology = "litemiro.cli.ontology:main"
litemiro-run = "litemiro.cli.run:main"
litemiro-report = "litemiro.cli.report:main"
litemiro-api = "litemiro.api.__main__:main"

[project.urls]
Repository = "https://github.com/teamfossil/litemiro"

[tool.hatch.build.targets.wheel]
packages = ["src/litemiro"]

[tool.hatch.build.targets.wheel.shared-data]
"src/litemiro/schemas" = "litemiro/schemas"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=litemiro",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
  "-m",
  "not manual",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: integration tests across components",
  "e2e: end-to-end simulation tests",
  "manual: opt-in tests excluded from CI; run with -m manual",
]

[tool.coverage.run]
branch = true
source = ["litemiro"]
omit = [
  "src/litemiro/cli/*",
  "src/litemiro/**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "ASYNC",
  "PL",  # pylint
  "PT",  # pytest-style
]
ignore = [
  "PLR0913", # too many arguments — sim engines are configurable
  "PLR2004", # magic number — formula constants are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PT011", "E501"]
"scripts/**" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["litemiro", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["litemiro"]

[[tool.mypy.overrides]]
module = [
  "litellm.*",
  "json_repair.*",
  "sentence_transformers.*",
  "uvicorn.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
